# aksumer-api

./: .env.example  Cargo.toml  README.md
.sqlx/: query-328187849d2916cbe594a147de765dcbf9c9787ad10b10c31ad47c66f552811e.json  query-3b01431359adfc26fa08d037ed8fe257c9dbb0b9f7196950e37fb6348d6bdd68.json  query-846ddf914bba37830a880c130815ebf0618613cac1315abd37ec3337b3669b3d.json  query-cf2babbfb6618616ba8978e922c7b85394184799cf9fe86e53bd289655bdd8db.json
migrations/: 20240519045631_create_users_table.up.sql
src/: config.rs  db.rs  main.rs  routes.rs
src/error/: api_error.rs  mod.rs  response.rs
src/extractor/: json_validator.rs  mod.rs
src/handler/: mod.rs  not_found.rs  user.rs
src/handler/users/: create.rs  login.rs  mod.rs
src/utils/: jwt.rs
