[package]
name = "aksum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["trace"] }
tower = "0.4.13"
dotenvy = "0.15.7"
serde_json = "1.0.117"
serde = "1.0.202"
thiserror = "1.0.61"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
once_cell = { version = "1.19.0" }
validator = { version = "0.18.1", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-native-tls", "mysql", "chrono"]
